Resolve SonarCloud findings in player ability code
Add PlayerAbilitiesComponent.isUntargetable so AI tasks get a single
check that also proves the target is non-null, clearing the null
dereference reports in ChaseTask, LungeAttackTask, RangedAttackTask and
the final boss components.

Also extract the invisibility and last stand event name constants, use
Math.clamp for the remaining health bound, and clean up the flagged
tests: rename the shadowing local in RangedAttackTaskTest, hoist the
inline Texture mock in HitboxFactoryTest, and replace listener lambdas
with method references.